<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">twittah</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">recent tweets</string>
    <string name="foo_label">\@foo</string>
    <string name="tweetbody_label">Tweet body</string>
    <string name="timestamp_label">timestamp ago</string>
    <string name="fullname_label">Full Name</string>
    <string name="compose">Compose</string>
    <string name="title_activity_compose">compose tweet</string>
    <string name="tweet_hint">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="top_label">Top</string>
    <string name="title_activity_tweet_detail"></string>
    <string name="label_140">140</string>
    <string name="home">HOME</string>
    <string name="mentions">MENTIONS</string>
    <string name="profile">Profile</string>
    <string name="title_activity_profile">your profile</string>

</resources>