<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ivTweeterPic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:src="@android:drawable/picture_frame" />

    <TextView
        android:id="@+id/tvTweeterFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@+id/ivTweeterPic"
        android:text="@string/fullname_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTweeterHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tvTweeterFullName"
        android:layout_below="@+id/tvTweeterFullName"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/ivTweeterPic"
        android:text="@string/foo_label"
        android:textColor="#aaaaaa" />

    <TextView
        android:id="@+id/tvTweeterTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ivTweeterPic"
        android:layout_margin="2dp"
        android:text="@string/tweetbody_label" />

</RelativeLayout>
